infrastructure/kubernetes/overlays/local/ingress-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
      protocol: TCP
    - name: postgres
      port: 5434
      targetPort: 5434
      nodePort: 30434
      protocol: TCP
    - name: minio-api       
      port: 9000
      targetPort: 9000
      nodePort: 30900
      protocol: TCP
